EM-357: preserve whitespace when displaying the tag text and make sure the tag group input is large enough for extra long tag groups

--- a/app/styles/components/tags-input/_tags-input.scss
+++ b/app/styles/components/tags-input/_tags-input.scss
@@ -6,9 +6,14 @@
     }
 }
 
+.tag-group-btn-text {
+    white-space: pre;
+}
+
 .tag-group-edit {
     position: absolute;
     z-index: 10;
+    width: 100%;
     input {
         // styles copied form .btn to match when editing
         display: inline-block;
@@ -23,6 +28,7 @@
         border: 1px solid transparent;
         background: transparent;
         color: #fff;
+        width: 100%;
         &:focus {
             outline: 0;
         }
